--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,47 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3 {
+  font-family: "Roboto", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+h2 {
+  color: #3046C5;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header h2 {
+  color: #295cd8;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.jumbotron {
+  background: linear-gradient(45deg, rgba(2,0,36,0.25) 0%, rgba(67,98,169,0.25) 35%, rgba(0,212,255,0.25) 100%);
+  height: 100vh;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.row-content {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  min-height: 200px;
 }
+
+.footer {
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+
+.card-header-api {
+  background-color: #4362a9;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.row-content-api {
+  padding-top: 20px;
+  margin-top: auto;
+}
+
